--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
 
 * {margin: 0; padding: 0; box-sizing: border-box;}
 
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+
+
 html,body{
 	height: 100%;
 	font-family: BrandonGrotesque reg;
@@ -256,7 +265,13 @@ nav#main_nav{}
 	cursor: pointer;
 	animation-duration: .3s;
     animation-delay: 1s;
+    transition: .2s;
 
+}
+
+.slider_info button:hover{
+	border-color: skyblue;
+	color:rgba(255,255,255,.8);
 }
 
 .custom_animated{
@@ -409,7 +424,7 @@ div.products-area{
 
 
 div.products-items{
-	width: 860px;
+	width: 861px;
 	margin:80px auto 100px auto;
 	min-height: 395px;
 }
@@ -675,6 +690,10 @@ div.Amazing-team{
 div.amaz-heading {
 padding: 50px 0 0 0;
 }
+ div.amaz-heading p{
+ 	top:-20px;
+ }
+
 div.amaz-heading h2 {
 color:#fff;
 
@@ -686,7 +705,7 @@ div.amazing-members-wrapper{
 div.amazing-members{
 	display: inline-block;
 	width: 200px;
-	padding: 30px 0 0 20px;
+	padding: 35px 0 0 20px;
 }
 
 div.amazing-members img{
@@ -745,14 +764,13 @@ div.amazing-icons i:nth-child(2){
 div.amazing-icons i:after{
 	content: "";
 	position: absolute;
-	width: 30px;
-	height: 30px;
-	top:0;
+	width: 43px;
+	height: 43px;
+	top: 1px;
 	left: 0;
 	border: 2px solid #fff;
 	border-radius: 50%;
 	padding: 5px 5px;
-
 
 }
 
