--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ div.product-item a{
 	width: 66px;
 	height: 65px;
 	border-radius: 50%;
-	background: #777777;
+	background: #BEF9FB;
 	z-index: -99;
 	left: 2px;
 	top: 2px;
